; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/extr_tcp_hpts.c_tcp_wakehpts.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/extr_tcp_hpts.c_tcp_wakehpts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcp_hpts_entry = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tcp_hpts_entry*)* @tcp_wakehpts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tcp_wakehpts(%struct.tcp_hpts_entry* %0) #0 {
  %2 = alloca %struct.tcp_hpts_entry*, align 8
  store %struct.tcp_hpts_entry* %0, %struct.tcp_hpts_entry** %2, align 8
  %3 = load %struct.tcp_hpts_entry*, %struct.tcp_hpts_entry** %2, align 8
  %4 = call i32 @HPTS_MTX_ASSERT(%struct.tcp_hpts_entry* %3)
  %5 = load %struct.tcp_hpts_entry*, %struct.tcp_hpts_entry** %2, align 8
  %6 = getelementptr inbounds %struct.tcp_hpts_entry, %struct.tcp_hpts_entry* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp eq i32 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load %struct.tcp_hpts_entry*, %struct.tcp_hpts_entry** %2, align 8
  %11 = getelementptr inbounds %struct.tcp_hpts_entry, %struct.tcp_hpts_entry* %10, i32 0, i32 0
  store i32 1, i32* %11, align 4
  %12 = load %struct.tcp_hpts_entry*, %struct.tcp_hpts_entry** %2, align 8
  %13 = getelementptr inbounds %struct.tcp_hpts_entry, %struct.tcp_hpts_entry* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @swi_sched(i32 %14, i32 0)
  br label %16

16:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @HPTS_MTX_ASSERT(%struct.tcp_hpts_entry*) #1

declare dso_local i32 @swi_sched(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
